--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 8.03 -> 8.04
+??/??/????
+
+- Improved performance of Passive Builders gadget
+- Passive builders don't show as resource pull unless they are using resources
+- Added numpad keys for camera control
+- Added q key for drawing
+
+8.03 -> 8.04
 16/10/2014
 
 - Removed no longer used DGun Limit modes
@@ -32,8 +40,8 @@
 - Updates for Spring 98.0
 - Players who drop before the game starts can be substituted by specs (provided the TS difference is small enough)
 - Added Open Hosts widget to display a list of currently active hosts to specs
-- Added (unsynced) commands /muteplayer <name>, /unmuteplayer <name>, /mutelist 
-- Muted player list is remembered between games
+- Added (unsynced) commands /ignoreplayer <name>, /unignoreplayer <name>, /ignorelist 
+- Ignored player list is remembered between games
 - Added a meteor shower to Armageddon
 - Added a new Limit DGun mode "charge"; if set, firing DGun uses/needs 10% charge, charge replenishes by 1%/s, is set to 0% on unload
 - Added a startpoint guessing routine for continuous metal maps
