--- a/luaui/changelog.txt
+++ b/luaui/changelog.txt
@@ -2,11 +2,11 @@
 28/07/2015
 
 - fixed upsidedown hovertank unitpic + a few unprocessed unitpics
-- "BA LOS colors" widget: remembers ; mode + fix keybinding for non english layouts + Add color presets + simplified LOS commands to /losradar and /loscolor
+- BA LOS colors widget: remembers ; mode + fix for non english layouts + color presets + changed LOS commands to /losradar and /loscolor
 - Remove "active/passive" commands handling from immobile builder widget (it was moved to "passive builders" widget
-- Add "passive builders" widget. All cons and labs are on passive by default except commanders and commando
-- GUIshader: fixed visual bugginess
-- RedUI console: removed blur, toggle it back with: /consoleblur
+- Added "passive builders" widget. All cons and labs are on passive by default except commanders and commando
+- GUIshader: fixed the occasional visual bugginess
+- RedUI console: removed GUIshader blur, toggle it back with: /consoleblur
 - RedUI build/order menu: toggle iconspacing with /iconspace
 - RedUI resourcebars decimal values are stripped
 - RedUI removed 1px space gap at screen edges
@@ -21,10 +21,10 @@
 24/07/2015
 
 Configurable widgets
-- Healthbars now have a border around them. (toggle style with /healthbars_style) Bars for wrecks are smaller, decolored and only show when zoomed a bit more.
+- Healthbars got a border around them. (toggle itwith /healthbars_style) wrecks got smaller decolored bar, only shows zoomed in more.
 - Ally-cursors now show playernames next to them. (toggle with /allycursorplayername and /allycursorspecname)
 - Added snow widget. Addes snow to maps using a snowy name. (toggles with /snow, and remembers setting per map)
-- Added Smart Select widget. (default off) Selects units as you drag over them. (modifier keys: SHIFT: select all, Z: same type, SPACE: new idle units, CTRL: invert selection)
+- Added Smart Select widget. Selects units as you drag over them. (keys: SHIFT: all, CTRL: invert, Z: same type, SPACE: new idle units)
 - LOS colors greyscaled + use ';'  key to toggle between los / los+radar
 - LOS view is enabled by default. If you dont like it - just disable widget
 "LOS View"(gfx_los_view.lua)
@@ -33,15 +33,15 @@ Others
 - Rezzed units will get a small halo above them.
 - Enemyspotter looks better and has increased performance.
 - Commands FX, lines are now textures with V shaped arrows + glow at endpoint diminishes over time.
-- Added Shadow quality manager: sets shadow quality max at start and lowers this when average fps gets lower and lower. (this widget wont enable shadows)
+- Added Shadow quality manager: sets shadow quality max at start and lowers as average fps gets lower. (this widget wont enable shadows)
 - BuildETA is slightly smaller.
 - Units with self-d command show wit ha skull icon and countdown time.
-- Units that were given to you will show a 'new' icon. Icon fades out gradually, unless they are out of sight, then the fadeout process starts over.
+- Units that were given to you will show a 'new' icon. It fades out gradually, unless they are out of sight, then the fadeout process starts over.
 - Smooth camera widget is slightly faster in moving camera.
 - Projectile lights are less bright now.
 - Customformations got a more glowy endpoint texture
 - Added highlight selected unit shader widget. Uses health colors. (default not enabled, wont render highlight for cloacked units)
-- Added Xray shader widget. A modest version, shows more instense when zoomed out. (its based on ZK version, but I improved performance quitte significantly)
+- Added Xray shader widget. Gets more instense when zoomed out. (its based on ZK version, but with improved performance)
 - Added anti ranges widget. Fades when zoomed in. Purple: anti being build. Red: building complete, 0 in stock. Orange: 1 in stock. Yellow: more than 2 in stock.
 - Commander name tags: different name style. when zoomout stays large.
 - Map Startbox: fixed jagged edges + Commander name tags styled names.
