--- a/luaui/changelog.txt
+++ b/luaui/changelog.txt
@@ -7,6 +7,7 @@ Balance changes:
 - Increased commander sonar distance to match sightdistance.
 - Decreased max speed of Valkyrie and Atlas (t1 air transport)
 - Enabled 'collide' unit property for: Aircons + Krow, Brawler, Rapier, Valkyrie and Atlas.
+- Update game energy conversion gadget (when metalmakers are EMP'd they wont produce metal) 
 
 Others:
 - Added "Changelog" widget: you can now browse the changelog.txt ingame!
